--- a/style/common.css
+++ b/style/common.css
@@ -5,5 +5,6 @@ body{
     font-size: 23px;
     font-weight: 400;
     font-style: normal;
+    text-align: center;
     font-family: 'Montserrat', sans-serif;
 }
