--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,16 @@
 @import "common.css";
 .our{
     text-align: center;
+    margin: 0 auto;
+}
+.slash{
+    margin: 0 auto;
+    width: 80px;
+    border-bottom-color: #333333;
+    color: #1202023d;
 }
 .container{
-    max-width: 1440px;
+    max-width: 960px;
     margin: 0 auto;
     text-align: center;
 }
@@ -11,7 +18,7 @@
     background: #E0E0E0;
     width: 200px;
     text-align: center;
-    margin: 15px;
+    margin: 5px;
     height: 100%;
     display: inline-block;
 }
@@ -22,11 +29,11 @@ img{
 }
 .Vectors{
     max-width: 200px;
-    height: 100%;
+    height: 60px;
+    margin: 17.95px;
 }
 .vector1{
-    width: 29px;
-    margin: 29px 14px 0 69px;
+    margin: 29px 6px;
     display: inline-block;
 }
 
@@ -36,8 +43,8 @@ img{
     object-fit: cover;
 }
 .Vector2{
-    width: 29px;
-    margin: 29px 1px 0 0;
+
+    margin: 29px 6px;
     display: inline-block;
 }
 .vec2{
@@ -50,10 +57,16 @@ img{
     height: auto;
 }
 .Vector3{
-    width: 29px;
-    margin: 29px 1px 0 0;
+
+    margin: 29px 6px;
     display: inline-block;
 }
+
+.vec4{
+    width: 13.9px;
+    height: auto;
+}
+
 h1{
     font-size:16px;
     line-height: 20px;
@@ -62,10 +75,18 @@ h1{
 }
 p{
     font-size:14px;
-    line-height: 20px;
     text-align: center;
     margin: 6px 0 0 0;
 }
+.text{
+    max-width: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding: 0 5px;
+    text-align: center;
+}
+
 
 
 
