--- a/style/reset.css
+++ b/style/reset.css
@@ -13,6 +13,7 @@
     outline: 0;
     text-decoration: none;
     vertical-align: baseline;
+    box-sizing: border-box;
 
     color: inherit;
     font-size: inherit;
